--- a/quiz.css
+++ b/quiz.css
@@ -2,6 +2,18 @@
   box-sizing: border-box;
 }
 
+body {
+  background: WhiteSmoke;
+}
+
+#header {
+  background: DodgerBlue;
+}
+
 .cardWrapper {
   max-width: 80%;
+}
+
+.carCard {
+  border: 2px solid black;
 }
