--- a/quiz.css
+++ b/quiz.css
@@ -1,19 +1,23 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  background: WhiteSmoke;
+	background: WhiteSmoke;
 }
 
 #header {
-  background: DodgerBlue;
+	background: DodgerBlue;
 }
 
 .cardWrapper {
-  max-width: 80%;
+	max-width: 80%;
 }
 
 .carCard {
-  border: 2px solid black;
+	border: 2px solid black;
+}
+
+.focusElement {
+	border: 2px solid blue;
 }
