description only changes on one card at a time

--- a/quiz.css
+++ b/quiz.css
@@ -6,9 +6,33 @@ body {
 	background: WhiteSmoke;
 }
 
+
+/*********
+Nav Bar
+*********/
+
 #header {
 	background: DodgerBlue;
 }
+
+.form-group {
+  margin-top: 3%;
+}
+
+.inputBar {
+  height: 30px;
+  width: 15%;
+  border-radius: .5em;
+}
+
+.buttonStyle {
+  float: left;
+  margin-left: 5%;
+}
+
+/*********
+Card
+*********/
 
 .cardWrapper {
 	max-width: 80%;
@@ -16,6 +40,8 @@ body {
 
 .carCard {
 	border: 2px solid black;
+  height: 300px;
+  border-radius: 2em;
 }
 
 .focusElement {
